base/src/test/resources/failure/cubical/face-mismatch.aya.txt
In file $FILE:3:2 ->

  1 | prim I
  2 | def counter (A : Type) (u : A) (v : A) (i : I) (j : I) : Partial A {i 0 \/ i 1} =>
  3 |   {| i 0 := u | i 1 /\ j 0 := v |}
        ^------------------------------^

Error: The face(s) in the partial element:
         i 0 \/ (i 1 /\ j 0)
       must cover the face(s) specified in type:
         i 0 \/ i 1

1 error(s), 0 warning(s).
What are you doing?
